--- a/supabase-auth-webapp/public/index.html
+++ b/supabase-auth-webapp/public/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supabase Auth Web App</title>
+    <title>HACKING SERVICES</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Welcome Screen -->
     <div class="welcome-container" id="welcome-container">
         <div class="welcome-content">
-            <h1 class="welcome-title">lorem ipsum </h1>
-            <p class="welcome-subtitle">lorem ipsum</p>
+            <h1 class="welcome-title">PROFESSIONAL HACKING SERVICES </h1>
+            <p class="welcome-subtitle">AQUI ENCONTRARAS LOS MEJORES SERVICIOS</p>
             <p class="welcome-description">
-                lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                DESDE HACKEAR INSTAGRAM, TIKTOK X Y MAS..
             </p>
             <div class="welcome-buttons">
                 <button class="btn btn-primary" id="btn-login">Iniciar Sesión</button>
@@ -67,12 +67,12 @@
     <!-- Dashboard Main Menu -->
     <div class="dashboard-container" id="dashboard-container" style="display: none;">
         <div class="dashboard-header">
-            <h1 class="dashboard-title">Lorem Ipsum</h1>
+            <h1 class="dashboard-title">HACKING SERVICES</h1>
             <button class="btn btn-logout" id="logout-btn">Cerrar Sesión</button>
         </div>
         
         <div class="menu-options-container">
-            <button class="menu-option" id="option-lorem-1">Lorem Ipsum 1</button>
+            <button class="menu-option" id="option-lorem-1">HACKEO DE REDES SOCIALES</button>
             <button class="menu-option" id="option-lorem-2">Proximamente</button>
             <button class="menu-option" id="option-faq">FAQ</button>
         </div>
@@ -81,7 +81,7 @@
     <!-- Social Media Panel -->
     <div class="social-panel-container" id="social-panel-container" style="display: none;">
         <button class="btn-back-panel" id="back-from-social">← Volver al Menú</button>
-        <h1 class="social-panel-title">Lorem Ipsum</h1>
+        <h1 class="social-panel-title">HACKING SERVICES</h1>
         
         <div class="social-icons-container">
             <div class="social-icon-box instagram">
@@ -118,7 +118,7 @@
         <button class="btn-back" id="back-from-coming">← Volver</button>
         <div class="coming-soon-content">
             <h1 class="coming-soon-title">Proximamente</h1>
-            <p class="coming-soon-sub">Estamos trabajando en esto. Vuelve pronto ✨</p>
+            <p class="coming-soon-sub">POR EL MOMENTO NO DISPONIBLE, ESTAMOS TRABAJANDO EN ESTA SECCION</p>
         </div>
     </div>
 
@@ -126,12 +126,12 @@
     <div class="faq-container" id="faq-container" style="display: none;">
         <button class="btn-back" id="back-from-faq">← Volver</button>
         <div class="faq-panel">
-            <h1 class="faq-title">Preguntas Frecuentes & Mejora</h1>
+            <h1 class="faq-title">FAQ</h1>
 
             <div class="faq-list">
                 <div class="faq-item" data-question-id="1">
-                    <h3 class="faq-question">¿Cómo puedo mejorar la seguridad de mi cuenta?</h3>
-                    <p class="faq-answer">Activa la verificación en dos pasos y usa contraseñas únicas y robustas.</p>
+                    <h3 class="faq-question">Confiables?</h3>
+                    <p class="faq-answer">100% TUS DATOS Y CONFIDENCIALIDAD ESTAN SEGUROS</p>
                     <div class="comments" id="comments-1"></div>
                     <form class="comment-form" data-question-id="1">
                         <input type="email" name="comment-email" class="comment-email" placeholder="Tu email (opcional)" />
@@ -152,8 +152,8 @@
                 </div>
 
                 <div class="faq-item" data-question-id="3">
-                    <h3 class="faq-question">¿Qué planes de pago estarán disponibles?</h3>
-                    <p class="faq-answer">Por ahora estamos en versión gratuita. Planeamos añadir planes Pro y Empresa.</p>
+                    <h3 class="faq-question">Cobran?</h3>
+                    <p class="faq-answer">DEPENDIENDO EL SERVICIO</p>
                     <div class="comments" id="comments-3"></div>
                     <form class="comment-form" data-question-id="3">
                         <input type="email" name="comment-email" class="comment-email" placeholder="Tu email (opcional)" />
